[package]
name = "intro_prog_woox"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.23"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = {version = "0.13.1", features = ["json"]}
